# relay-drones

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  oauth-trick.md  safety-rails.md
launchagents/: README.md  com.example.relay-drones.claude-smoketest.plist.template  com.example.relay-drones.ingestor-daily-prompt.plist.template  com.example.relay-drones.ingestor-self-prompt.plist.template  com.example.relay-drones.ingestor-system-monitor.plist.template  com.example.relay-drones.triage.plist.template  com.example.relay-drones.worker.plist.template
relay_drones/: attempted_fixes.py  cli.py  config.py  queue.py  reporter.py  triage.py  worker.py
relay_drones/ingestors/: _lib.py  daily_prompt.py  self_prompt.py  system_monitor.py
relay_drones/lib/: bb.py  claim.py  claude_handoff.py  notify.py  openrouter.py
systemd/: README.md  relay-drones-claude-smoketest.service  relay-drones-claude-smoketest.timer  relay-drones-triage.service  relay-drones-triage.timer  relay-drones-worker@.service
tests/: test_action_kind_tools.py  test_attempted_fixes.py  test_extract_tail.py  test_handoff_guards.py  test_notify.py
